--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<!-- Header -->
+<poke-header></poke-header>
+
+<main>
+  <!-- Search -->
+  <poke-search></poke-search>
+
+  <!-- List -->
+  <poke-list></poke-list>
+</main>
