styles, formatação componente poke list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
-@import './config-scss/reset.scss';
 @import './config-scss/variables.scss';
+@import './config-scss/reset.scss';
 @import './config-scss/rem-calc.scss';
+// @import './config-scss/btn.scss';
+// @import './config-scss/animation.scss';
 
 html {
   font-family: 'Roboto', sans-serif;
@@ -9,6 +11,7 @@ html {
 
 main {
   max-width: rem-calc(600);
-  margin: 0 auto;
   box-sizing: border-box;
+  padding: 0 20px;
+  margin: 0 auto;
 }
