--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -6,6 +6,7 @@ $padding: rem-calc(20);
 :host {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   padding: $padding 0;
 
@@ -15,6 +16,7 @@ $padding: rem-calc(20);
 
     width: calc(49% - 2.5rem);
     height: rem-calc(157 - 40);
+    margin-bottom: rem-calc(10);
     padding: $padding;
     background: var(--branco);
 
@@ -25,6 +27,7 @@ $padding: rem-calc(20);
         font-size: rem-calc(22);
         font-style: italic;
         font-weight: 700;
+        text-transform: capitalize;
         margin-bottom: rem-calc(10);
       }
 
@@ -61,7 +64,7 @@ $padding: rem-calc(20);
       background: url('../../../assets/bg/background-list-pokemons.svg') no-repeat;
 
       img {
-        width: rem-calc(80);
+        width: rem-calc(60);
       }
     }
   }
