--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import './config-scss/variables.scss';
 @import './config-scss/reset.scss';
 @import './config-scss/rem-calc.scss';
-// @import './config-scss/btn.scss';
+@import './config-scss/btn.scss';
 // @import './config-scss/animation.scss';
 
 html {
