--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -27,3 +27,10 @@
     </a>
   </ng-template>
 </section>
+
+<img
+  src="assets/img/error.png"
+  alt="Erro no carregamento de dados"
+  width="100%"
+  *ngIf="apiError"
+/>
